[Long]-Update thống kê, login facebook, google, get reaction dựa post

--- a/charity/src/main/resources/templates/login.html
+++ b/charity/src/main/resources/templates/login.html
@@ -73,12 +73,12 @@
                             </div>
                             <div class="row">
                                 <div class="col-sm-6">
-                                    <button class="btn btn-block mb-2 btn-primary"><i data-feather="facebook"></i>
-                                        Facebook</button>
+                                    <a class="btn btn-block mb-2 btn-primary" th:href="@{/oauth2/authorization/facebook}"><i data-feather="facebook"></i>
+                                        Facebook</a>
                                 </div>
                                 <div class="col-sm-6">
-                                    <button class="btn btn-block mb-2 btn-secondary"><i data-feather="github"></i>
-                                        Github</button>
+                                    <a class="btn btn-block mb-2 btn-secondary" th:href="@{/oauth2/authorization/google}" ><i data-feather="google"></i>
+                                        Google</a>
                                 </div>
                             </div>
                         </div>
