--- a/charity/src/main/resources/templates/pages/test.html
+++ b/charity/src/main/resources/templates/pages/test.html
@@ -5,70 +5,109 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Add Project Category</title>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/2.9.3/Chart.min.js"></script>
+    <title>Donation Statistics</title>
 </head>
 
 <body>
     <div class="main-content container-fluid" layout:fragment="content">
-        <div class="container">
-            <div class="header clearfix">
-                <h3 class="text-muted">KẾT QUẢ THANH TOÁN</h3>
+        <div class="row">
+            <div class="col-md-12">
+                <div class="input-group mb-3">
+                    <select id="year" class="form-select">
+                        <option value="2021">2021</option>
+                        <option value="2022">2022</option>
+                        <option value="2023" selected>2023</option>
+                        <option value="2024">2024</option>
+                    </select>
+                    <button id="monthlyButton" class="btn btn-primary ml-2">THỐNG KÊ THÁNG</button>
+                    <button id="quarterlyButton" class="btn btn-primary ml-2">THỐNG KÊ QUÝ</button>
+                    <button id="yearlyButton" class="btn btn-primary ml-2">THỐNG KÊ NĂM</button>
+                </div>
             </div>
-            <div class="table-responsive">
-                <div class="form-group">
-                    <label >Mã giao dịch thanh toán:</label>
-                    <label><%=request.getParameter("vnp_TxnRef")%></label>
-                </div>    
-                <div class="form-group">
-                    <label >Số tiền:</label>
-                    <label><%=request.getParameter("vnp_Amount")%></label>
-                </div>  
-                <div class="form-group">
-                    <label >Mô tả giao dịch:</label>
-                    <label><%=request.getParameter("vnp_OrderInfo")%></label>
-                </div> 
-                <div class="form-group">
-                    <label >Mã lỗi thanh toán:</label>
-                    <label><%=request.getParameter("vnp_ResponseCode")%></label>
-                </div> 
-                <div class="form-group">
-                    <label >Mã giao dịch tại CTT VNPAY-QR:</label>
-                    <label><%=request.getParameter("vnp_TransactionNo")%></label>
-                </div> 
-                <div class="form-group">
-                    <label >Mã ngân hàng thanh toán:</label>
-                    <label><%=request.getParameter("vnp_BankCode")%></label>
-                </div> 
-                <div class="form-group">
-                    <label >Thời gian thanh toán:</label>
-                    <label><%=request.getParameter("vnp_PayDate")%></label>
-                </div> 
-                <div class="form-group">
-                    <label >Tình trạng giao dịch:</label>
-                    <label>
-                        <%
-                            if (signValue.equals(vnp_SecureHash)) {
-                                if ("00".equals(request.getParameter("vnp_TransactionStatus"))) {
-                                    out.print("Thành công");
-                                } else {
-                                    out.print("Không thành công");
-                                }
+        </div>
 
-                            } else {
-                                out.print("invalid signature");
-                            }
-                        %></label>
-                </div> 
-            </div>
-            <p>
-                &nbsp;
-            </p>
-            <footer class="footer">
-                <p>&copy; VNPAY 2020</p>
-            </footer>
-        </div>  
+        <canvas id="myChart" width="400" height="200"></canvas>
     </div>
-
 </body>
 
 </html>
+<script>
+    window.addEventListener('load', (event) => {
+        fetchData();
+    });
+    let currentChart = 'month';
+    let chart;
+
+    document.getElementById('monthlyButton').addEventListener('click', function () {
+        currentChart = 'month';
+        fetchData();
+    });
+
+    document.getElementById('quarterlyButton').addEventListener('click', function () {
+        currentChart = 'quarter';
+        fetchData();
+    });
+
+    document.getElementById('yearlyButton').addEventListener('click', function () {
+        currentChart = 'year';
+        fetchData();
+    });
+
+    function fetchData() {
+        const year = document.getElementById('year').value;
+        let endpoint;
+        if (currentChart === 'month') {
+            endpoint = '/admin/month';
+        } else if (currentChart === 'quarter') {
+            endpoint = '/admin/quarter';
+        } else {
+            endpoint = '/admin/year';
+        }
+        fetch(`${endpoint}?year=${year}`)
+            .then(response => response.json())
+            .then(data => {
+                if (chart) {
+                    chart.destroy();
+                }
+                data.sort((a, b) => a.year - b.year);
+                drawBarChart(data);
+            })
+            .catch(error => {
+                console.error('Error:', error);
+            });
+    }
+
+    function drawBarChart(data) {
+        console.log(data);
+        let labels;
+        if (currentChart === 'month') {
+            labels = ['1', '2', '3', '4', '5', '6', '7', '8', '9', '10', '11', '12'];
+        } else if (currentChart === 'quarter') {
+            labels = ['Quý 1', 'Quý 2', 'Quý 3', 'Quý 4'];
+        } else {
+            labels = data.map(entry => entry.year.toString());
+        }
+        const ctx = document.getElementById('myChart').getContext('2d');
+        chart = new Chart(ctx, {
+            type: 'line',
+            data: {
+                labels: labels,
+                datasets: [{
+                    label: 'Total Donation',
+                    data: data.map(entry => entry.totalDonation),
+                    backgroundColor: 'rgba(75, 192, 192, 0.2)',
+                    borderColor: 'rgba(75, 192, 192, 1)',
+                    borderWidth: 1
+                }]
+            },
+            options: {
+                scales: {
+                    y: {
+                        beginAtZero: true
+                    }
+                },
+            }
+        });
+    }
+</script>
