[Long] - Update export excel file

--- a/charity/src/main/resources/templates/fragments/sidebar.html
+++ b/charity/src/main/resources/templates/fragments/sidebar.html
@@ -74,9 +74,9 @@
                         </a>
                     </li>
                     <li class="sidebar-item">
-                        <a th:href="@{/stats}" class='sidebar-link'>
+                        <a th:href="@{/export}" class='sidebar-link'>
                             <i data-feather="file-text" width="20"></i>
-                            <span>Thống Kê</span>
+                            <span>Sao Kê</span>
                         </a>
                     </li>
                 </ul>
