--- a/client/src/components/social/Chat/Chatbox.css
+++ b/client/src/components/social/Chat/Chatbox.css
@@ -6,7 +6,7 @@
   .chatbox-messages {
     /* ... */
   }
-  
+
   .message-box {
     height: 400px;
     overflow-y: auto;
@@ -14,7 +14,6 @@
   
   .message {
     display: flex;
-    align-items: center;
     margin-bottom: 10px;
   }
   
@@ -29,7 +28,15 @@
     justify-content: flex-end;
     text-align: right;
   }
-  
+
+  .message-content {
+    border: 2px solid white; 
+    border-radius: 8px; 
+    padding: 10px; 
+    margin-bottom: 5px; 
+    background-color: whitesmoke;
+  }
+
   .message-left {
     justify-content: flex-start;
     text-align: left;
