--- a/charity/src/main/resources/templates/pages/project.html
+++ b/charity/src/main/resources/templates/pages/project.html
@@ -18,6 +18,7 @@
                 <div class="card-body">
                     <form th:action="@{/admin/project}" method="post" th:object="${project}" enctype="multipart/form-data">
                         <input type="hidden" id="projectId" name="projectId"  th:field="*{id}"/>
+                        <input type="hidden" id="contributed" name="projectId"  th:field="*{contributedAmount}"/>
                         <div class="form-body">
                             <div class="row">
                                 <div class="col-md-4">
