--- a/charity/src/main/resources/templates/pages/ncategory.html
+++ b/charity/src/main/resources/templates/pages/ncategory.html
@@ -25,7 +25,7 @@
                                 </div>
                                 <div class="col-md-8 form-group">
                                     <input type="text" id="name" name="name" th:field="*{name}"
-                                        style="font-size: 16px; width: 80%;" />
+                                        style="font-size: 16px; width: 80%;" required/>
                                 </div>
                                 <div class="col-sm-12 d-flex justify-content-end">
                                     <button type="submit" class="btn btn-primary me-1 mb-1"
