--- a/charity/src/main/resources/templates/pages/pcategory.html
+++ b/charity/src/main/resources/templates/pages/pcategory.html
@@ -17,7 +17,7 @@
             <div class="card-content">
                 <div class="card-body">
                     <form th:action="@{/admin/pcategory}" method="post" th:object="${projectCategory}">
-                        <input type="hidden" id="categoryId" name="categoryId"  th:field="*{id}"/>
+                        <input type="hidden" id="categoryId" name="categoryId"  th:field="*{id}" required/>
                         <div class="form-body">
                             <div class="row">
                                 <div class="col-md-4">
@@ -25,7 +25,7 @@
                                 </div>
                                 <div class="col-md-8 form-group">
                                     <input type="text" id="name" name="name" th:field="*{name}"
-                                        style="font-size: 16px; width: 80%;" />
+                                        style="font-size: 16px; width: 80%;" required/>
                                 </div>
                                 <div class="col-sm-12 d-flex justify-content-end">
                                     <button type="submit" class="btn btn-primary me-1 mb-1"
