--- a/client/src/index.css
+++ b/client/src/index.css
@@ -1,3 +1,41 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+.top-menu-item{
+    @apply hover:text-[#007fff] relative after:absolute after:bottom-0 after:left-0 after:bg-[#007fff] after:h-0.5 after:w-0 hover:after:w-full after:transition-all after:ease-in-out
+}
+.top-menu-text {
+    @apply mb-3 text-[#007fff];
+    font-size: 15px; /* Thay đổi giá trị này thành kích cỡ mong muốn */
+  }
+  
+.top-menu-text-links{
+    @apply hover:underline hover:text-[#0E740E] text-xs pb-3 font-medium
+}
+
+.bottom-menu-item{
+    @apply hover:text-[#49B949] relative after:absolute after:bottom-0 after:left-0 after:bg-[#49B949] after:h-0.5 after:w-0 hover:after:w-full after:transition-all after:ease-in-out
+}
+.bottom-menu-text{
+    @apply mb-1 text-2xl text-[#fff] font-semibold pb-2
+}
+.bottom-menu-text-links{
+    @apply text-[#fff] text-sm pb-2 font-light
+}
+.bottom-links{
+    @apply hover:underline
+}
+.product-title-header{
+    @apply font-bold text-[22px] mb-10 flex justify-center
+}
+.top-menu-text-search{
+    @apply mb-1 text-lg text-[#0E740E] pb-2
+}
+.top-menu-text-links-search{
+    @apply hover:underline hover:text-[#0E740E] text-sm pb-1 font-semibold
+}
+
+.product-description-head{
+    @apply hover:text-[#49B949] relative after:absolute after:bottom-[-4px] after:left-0 after:bg-[#49B949] after:h-0.5 after:w-0 hover:after:w-full after:transition-all after:ease-in-out
+}
