--- a/client/src/pages/registerVolunteer.css
+++ b/client/src/pages/registerVolunteer.css
@@ -1,5 +1,5 @@
 
-.container {
+/* .container {
     max-width: 800px;
     margin: 0 auto;
     padding: 20px;
@@ -8,7 +8,7 @@
     background-color: #fff;
     box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
   }
-  
+   */
   
   .form-heading {
     text-align: center;
