Long - Update project address

--- a/charity/src/main/resources/templates/fragments/sidebar.html
+++ b/charity/src/main/resources/templates/fragments/sidebar.html
@@ -32,6 +32,10 @@
                             <i data-feather="briefcase" width="20"></i>
                             <span>Dự Án</span>
                         </a>
+                        <a th:href="@{/addresses}" class='sidebar-link'>
+                            <i data-feather="briefcase" width="20"></i>
+                            <span>Địa Điểm</span>
+                        </a>
                     </li>
 
                     <li class='sidebar-title'>QUẢN LÝ TIN TỨC TỪ THIỆN</li>
