Dat - 50% of social page

--- a/client/src/components/comment.css
+++ b/client/src/components/comment.css
@@ -1,4 +1,4 @@
-
+/* 
 .comment {
     display: flex;
     align-items: center;
@@ -84,4 +84,4 @@
     color: #808080;
     fontStyle: italic;
   }
-  
+   */
