--- a/client/src/components/social/post/post.css
+++ b/client/src/components/social/post/post.css
@@ -1,170 +1,309 @@
 .post {
-    width: 100%;
-    border-radius: 10px;
-    -webkit-box-shadow: 0px 0px 16px -8px rgba(0, 0, 0, 0.68);
-    box-shadow: 0px 0px 16px -8px rgba(0, 0, 0, 0.68);
-    margin: 30px 0;
-  }
-  
-  .postWrapper {
-    padding: 10px;
-  }
-  
-  .postTop {
-    display: flex;
-    align-items: center;
-    justify-content: space-between;
-  }
-  
-  .postTopLeft {
-    display: flex;
-    align-items: center;
-  }
-  
-  .postProfileImg {
-    width: 32px;
-    height: 32px;
-    border-radius: 50%;
-    object-fit: cover;
-  }
-  
-  .postUsername {
-    font-size: 15px;
-    font-weight: 500;
-    margin: 0 10px;
-  }
-  
-  .postDate{
-      font-size: 12px;
-  }
-  
-  .postCenter{
-      margin: 20px 0;
-  }
-  
-  .postImg{
-      margin-top: 20px;
-      width: 100%;
-      max-height: 500px;
-      object-fit: contain;
-  }
-  
-  .postBottom{
-      display: flex;
-      align-items: center;
-      justify-content: space-between;
-  }
-  
-  .postBottomLeft{
-      display: flex;
-      align-items: center;   
-  }
-  
-  .likeIcon{
-      width: 24px;
-      height: 24px;
-      margin-right: 5px;
-      cursor: pointer;
-  }
-  
-  .postLikeCounter{
-      font-size: 15px;
-  }
-  
-  .postCommentText{
-      cursor: pointer;
-      border-bottom: 1px dashed gray;
-      font-size: 15px;
-  }
+  width: 100%;
+  border-radius: 10px;
+  -webkit-box-shadow: 0px 0px 16px -8px rgba(0, 0, 0, 0.68);
+  box-shadow: 0px 0px 16px -8px rgba(0, 0, 0, 0.68);
+  margin: 30px 0;
+}
 
-  /* NewsDetails.css */
-.comment-container {
-  /* Định dạng chung cho container chứa tất cả các comments */
+.postWrapper {
+  padding: 10px;
+}
+
+.postTop {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+}
+
+.postTopLeft {
+  display: flex;
+  align-items: center;
+}
+
+.postProfileImg {
+  width: 32px;
+  height: 32px;
+  border-radius: 50%;
+  object-fit: cover;
+}
+
+.postUsername {
+  font-size: 15px;
+  font-weight: 500;
+  margin: 0 10px;
+}
+
+.postDate {
+  font-size: 12px;
+}
+
+.postCenter {
+  margin: 20px 0;
+}
+
+.postImg {
+  margin-top: 20px;
+  width: 100%;
+  max-height: 500px;
+  object-fit: contain;
+}
+
+.postBottom {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+}
+
+.postBottomLeft {
+  display: flex;
+  align-items: center;
+}
+
+.likeIcon {
+  width: 24px;
+  height: 24px;
+  margin-right: 5px;
+  cursor: pointer;
+}
+
+.postLikeCounter {
+  font-size: 15px;
+}
+
+.postCommentText {
+  cursor: pointer;
+  border-bottom: 1px dashed gray;
+  font-size: 15px;
 }
 
 .comment {
-    display: flex;
-    align-items: center;
-    margin: 10px;
-    padding: 10px;
-    border: 1px solid gray;
-    border-radius: 10px;
-    background-color: #f0f0f0;
-  }
-  
-  .comment .comment-avatar {
-    margin-right: 10px;
-  }
-  
-  .comment .comment-avatar img {
-    width: 32px;
-    height: 32px;
-    border-radius: 50%;
-    object-fit: cover;
-  }
-  
-  .comment .comment-details {
-    flex: 1;
-  }
-  
-  .comment .comment-username {
-    font-size: 16px;
-    font-weight: bold;
-    color: #0000ff;
-  }
-  
-  .comment .comment-content {
-    font-size: 14px;
-    color: #000000;
-  }
-  
-  .comment .comment-time {
-    font-size: 12px;
-    color: #808080;
-    fontStyle: italic;
-  }
-  
+  display: flex;
+  align-items: center;
+  margin: 10px;
+  padding: 10px;
+  border: 1px;
+  border-radius: 10px;
+}
 
-  .reply {
-    display: flex;
-    align-items: center;
-    margin: 10px;
-    padding: 10px;
-    border: 1px solid gray;
-    border-radius: 10px;
-    background-color: #e0e0e0;
-    margin-left: 5%;
-  }
-  
-  .reply .reply-avatar {
-    margin-right: 10px;
-  }
-  
-  .reply .reply-avatar img {
-    width: 32px;
-    height: 32px;
-    border-radius: 50%;
-    object-fit: cover;
-  }
-  
-  .reply .reply-details {
-    flex: 1;
-  }
-  
-  .reply .reply-username {
-    font-size: 16px;
-    font-weight: bold;
-    color: #0000ff;
-  }
-  
-  .reply .reply-content {
-    font-size: 14px;
-    color: #000000;
-  }
-  
-  .reply .reply-time {
-    font-size: 12px;
-    color: #808080;
-    fontStyle: italic;
-  }
-  
+.comment .comment-avatar {
+  margin-right: 10px;
+}
+
+.comment .comment-avatar img {
+  width: 32px;
+  height: 32px;
+  border-radius: 50%;
+  object-fit: cover;
+}
+
+.comment .comment-details {
+  flex: 1;
+}
+
+.comment .comment-username {
+  font-size: 16px;
+  font-weight: bold;
+  color: #0000ff;
+}
+
+.comment .comment-content {
+  font-size: 14px;
+  color: #000000;
+}
+
+.comment .comment-time {
+  font-size: 12px;
+  color: #808080;
+  font-style: italic;
+}
+.full-width {
+  width: 100%;
+}
+.reply {
+  display: flex;
+  align-items: center;
+  margin: 10px;
+  padding: 10px;
+  border: 1px solid gray;
+  border-radius: 10px;
+  background-color: #e0e0e0;
+  margin-left: 5%;
+}
+
+.reply .reply-avatar {
+  margin-right: 10px;
+}
+
+.reply .reply-avatar img {
+  width: 32px;
+  height: 32px;
+  border-radius: 50%;
+  object-fit: cover;
+}
+
+.reply .reply-details {
+  flex: 1;
+}
+
+.reply .reply-username {
+  font-size: 16px;
+  font-weight: bold;
+  color: #0000ff;
+}
+
+.reply .reply-content {
+  font-size: 14px;
+  color: #000000;
+}
+
+.reply .reply-time {
+  font-size: 12px;
+  color: #808080;
+  font-style: italic;
+}
+
+/*new style*/
+
+.feeds {
+  display: flex;
+  align-items: center;
+  gap: 30px;
+  flex-direction: column;
+  margin-top: 30px;
+}
+
+.feed {
+  padding: 20px;
+  border-radius: 5rem;
+  background: var (--color-card);
+  width: 100%;
+  overflow: hidden;
+}
+.feed .top-content {
+  display: flex;
+  justify-content: space-between;
+  margin-bottom: 10px;
+}
+
+.feed p {
+  margin-bottom: 1rem;
+}
+
+.feed .mid-content img {
+  max-height: 480px;
+  border-radius: 0.5rem;
+  aspect-ratio: 1/1;
+}
+
+.feed .bottom-content {
+  display: flex;
+  align-items: center;
+  gap: 20px;
+  margin: 1rem 0;
+}
+
+root {
+  --color-primary: #6c63ff;
+  --text-color: black;
+  --color-bg: rgb(236, 236, 236);
+  --color-card: white;
+  --color-soft: #aaaaaa;
+  --color-border: lightgray;
+  --color-red: red;
+}
+
+.container {
+  max-width: 991px;
+  width: 100%;
+  margin: 0 auto;
+}
+h1,
+h2,
+h3,
+h4,
+h5 {
+  font-weight: 600;
+  color: var(--text-color);
+}
+
+img {
+  width: 100%;
+  display: block;
+  object-fit: cover;
+}
+
+.user {
+  display: flex;
+  align-items: center;
+  gap: 10px;
+}
+
+.user img {
+  width: 33px;
+  aspect-ratio: 1/1;
+  border-radius: 50%;
+}
+
+.user h4 {
+  color: var(--color-primary);
+}
+
+body {
+  background: var(--color-bg);
+  color: var(--color-soft);
+}
+
+small,
+p {
+  color: var(--color-soft);
+}
+
+.btn {
+  padding: 0.6rem 1.6rem;
+  display: inline-block;
+  width: fit-content;
+  cursor: pointer;
+  border-radius: 0.5rem;
+  font-size: 0.9rem;
+  font-weight: 500;
+  transition: 0.3s ease;
+}
+
+.bth:hover {
+  opacity: 0.7;
+}
+.btn-primary {
+  background: var(--color-primary);
+  color: white;
+}
+
+.btn-red {
+  background: var(--color-red);
+  color: white;
+}
+
+.comments {
+  width: 100%;
+  background-color: var(--color-bg);
+  padding: 1rem;
+  border-radius: 0.5rem;
+  display: flex;
+  flex-direction: column;
+  gap: 1rem;
+  margin: 1rem 0;
+}
+
+.comments .user {
+  width: 100%;
+  justify-content: space-between;
+}
+
+.comments .user input {
+  width: 100%;
+  background: transparent;
+  border: 1px solid var(--color-soft);
+  padding: 10px;
+  border-radius: 0.5rem;
+  color: var(--color-soft);
+}
