Dat - Cho them thoi gian di, nan ni

--- a/client/src/pages/registerVolunteer.css
+++ b/client/src/pages/registerVolunteer.css
@@ -10,7 +10,7 @@
   }
    */
   
-  .form-heading {
+  /* .form-heading {
     text-align: center;
     font-size: 24px;
     color: #007bff;
@@ -59,4 +59,4 @@
     border: 1px solid #ccc;
     border-radius: 5px;
   }
-  
+   */
