--- a/client/src/pages/projects.css
+++ b/client/src/pages/projects.css
@@ -43,7 +43,7 @@
   .card-link {
     text-decoration: none;
     margin-right: 5px;
-    padding: 5px 10px;
+    padding: 0.5rem;
     border: 1px solid #007bff;
     border-radius: 5px;
     color: #007bff;
@@ -57,3 +57,6 @@
     padding: 5px 10px;
   }
   
+  .custom-card-footer {
+    padding: 0.5rem;
+  }
