--- a/client/src/components/social/post/post.css
+++ b/client/src/components/social/post/post.css
@@ -101,18 +101,18 @@
   flex: 1;
 }
 
-.comment .comment-username {
+.comment-details .comment-username {
   font-size: 16px;
   font-weight: bold;
-  color: #0000ff;
+  color: black;
 }
 
-.comment .comment-content {
+.comment-details .comment-content {
   font-size: 14px;
   color: #000000;
 }
 
-.comment .comment-time {
+.comment-details .comment-time {
   font-size: 12px;
   color: #808080;
   font-style: italic;
@@ -306,4 +306,12 @@ p {
   padding: 10px;
   border-radius: 0.5rem;
   color: var(--color-soft);
+}
+
+
+
+.comment-post {
+  display: flex;
+  flex-direction: column;
+  margin-left: 10px;
 }
