--- a/client/src/components/social/rightbar/rightbar.css
+++ b/client/src/components/social/rightbar/rightbar.css
@@ -1,83 +1,25 @@
 .rightbar {
-  flex: 3.5;
+  width: 500px;
+  transition: width 0.3s ease;
+  position: relative;
 }
 
-.rightbarWrapper {
-  padding: 20px 20px 0 0;
+.rightbar.collapsed {
+  width: 50px;
 }
 
-.birthdayContainer {
-  display: flex;
-  align-items: center;
-}
-
-.birthdayImg {
-  width: 40px;
-  height: 40px;
-  margin-right: 10px;
-}
-
-.birthdayText {
-  font-weight: 300;
-  font-size: 15px;
-}
-
-.rightbarAd {
-  width: 100%;
-  border-radius: 10px;
-  margin: 30px 0;
-}
-
-.rightbarTitle{
-    margin-bottom: 20px;
-}
-
-.rightbarFriendList {
-  padding: 0;
-  margin: 0;
-  list-style: none;
-}
-
-.rightbarTitle{
-  font-size: 18px;
-  font-weight: 500;
-  margin-bottom: 10px;
-}
-
-.rightbarInfo{
-  margin-bottom: 30px;
-}
-
-.rightbarInfoItem{
-  margin-bottom: 10px;
-}
-
-.rightbarInfoKey{
-  font-weight: 500;
-  margin-right: 15px;
-  color: #555;
-}
-
-.rightbarInfoValue{
-  font-weight: 300;
-}
-
-.rightbarFollowings{
-  display: flex;
-  flex-wrap: wrap;
-  justify-content: space-between;
-}
-
-.rightbarFollowing{
-  display: flex;
-  flex-direction: column;
-  margin-bottom: 20px;
+.toggle-button {
+  /* position: absolute;  */
+  bottom: 20px;
+  right: 20px;
+  z-index: 999;
+  padding: 10px;
+  background-color: transparent;
+  border: none;
   cursor: pointer;
+  transition: background-color 0.3s ease;
 }
 
-.rightbarFollowingImg{
-  width: 100px;
-  height: 100px;
-  object-fit: cover;
-  border-radius: 5px;
+.toggle-button:hover {
+  background-color: #eee; /* Màu nền khi di chuột qua nút */
 }
