--- a/client/src/components/social/post/post.css
+++ b/client/src/components/social/post/post.css
@@ -315,3 +315,20 @@ p {
   flex-direction: column;
   margin-left: 10px;
 }
+
+.gray-link {
+  color: gray;
+  text-decoration: none;
+}
+
+.gray-link:hover {
+  text-decoration: underline;
+}
+
+.underline-on-hover {
+  text-decoration: none;
+}
+
+.underline-on-hover:hover {
+  text-decoration: underline;
+}
