Dat - SuperAdmin manage role

--- a/charity/src/main/resources/templates/fragments/sidebar.html
+++ b/charity/src/main/resources/templates/fragments/sidebar.html
@@ -57,6 +57,12 @@
                                 <span>Tài Khoản</span>
                             </a>
                         </li>
+                        <li class="sidebar-item">
+                            <a th:href="@{/userRole}" class='sidebar-link'>
+                                <i data-feather="file-text" width="20"></i>
+                                <span>Vai trò</span>
+                            </a>
+                        </li>
                     </div>
 
 
